gst-vaapi NEWS -- summary of changes.  2010-05-13
Copyright (C) 2010 Splitted-Desktop Systems

Version 0.2.1 - 13.May.2010
* Fix integration within the playbin2 pipeline
* Fix vaapidecode to expose the HW supported caps only
* Add GstXOverlay interface to vaapisink (e.g. for Totem)

Version 0.2.0 - 05.May.2010
* Relicense gst-libs/ code to LGPL v2.1+
* Add FFmpeg/VAAPI decoder for the new `vaapidecode' element

Version 0.1.2 - 30.Mar.2010
* Add AYUV image format
* Add compatibility with the original VA-API 0.29
* Add OpenGL support through VA/GLX extensions or TFP+FBO fallback

Version 0.1.1 - 23.Mar.2010
* Document public API for libgstvaapi-*.so.*
* Optimize `vaapiconvert' pipeline (direct-rendering)
* Allow `vaapisink` to render videos in fullscreen mode

Version 0.1.0 - 16.Mar.2010
* Initial release