@@ -554,10 +554,12 @@ gl_unbind_texture(GLTextureState *ts)
 GLuint
 gl_create_texture(GLenum target, GLenum format, guint width, guint height)
 {
+    GLenum internal_format;
     GLuint texture;
     GLTextureState ts;
     guint bytes_per_component;
 
+    internal_format = format;
     switch (format) {
     case GL_LUMINANCE:
         bytes_per_component = 1;
@@ -567,6 +569,7 @@ gl_create_texture(GLenum target, GLenum format, guint width, guint height)
         break;
     case GL_RGBA:
     case GL_BGRA:
+        internal_format = GL_RGBA;
         bytes_per_component = 4;
         break;
     default:
@@ -586,7 +589,7 @@ gl_create_texture(GLenum target, GLenum format, guint width, guint height)
     glTexImage2D(
         target,
         0,
-        bytes_per_component,
+        internal_format,
         width, height,
         0,
         format,
