@@ -2,6 +2,7 @@ gst-vaapi NEWS -- summary of changes.  2010-05-13
 Copyright (C) 2010 Splitted-Desktop Systems
 
 Version 0.2.1 - 13.May.2010
+* Fix OpenGL texture internal format (Clutter)
 * Fix integration within the playbin2 pipeline
 * Fix vaapidecode to expose the HW supported caps only
 * Add GstXOverlay interface to vaapisink (e.g. for Totem)
